editors/tree-sitter-lisette/grammar.js
    source_file: $ => repeat($._statement),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    _type: $ => choice(
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      $._type_identifier,
      $.never_type,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    let_declaration: $ => seq(
      'let',
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(seq(
        'else',
        field('alternative', $.block),
      )),
      $._semicolon,
    ),

    // Directives

    _pattern: $ => choice(
      $._literal_pattern,
      $.identifier,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $.slice_pattern,
      $.or_pattern,
      $.as_binding_pattern,
      $.remaining_field_pattern,
      '_',
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
    )),

    imaginary_literal: $ => seq(
      choice($.integer_literal, $.float_literal),
      token.immediate('i'),
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      token.immediate('"'),
    ),

    raw_string_literal: _ => token(seq('r"', /[^"]*/, '"')),

    format_string: $ => seq(
      'f"',
      repeat(choice(
        $._format_string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      token.immediate('"'),
    ),

    interpolation: $ => seq(
      alias($._interpolation_open, '{'),
      $._expression,
      '}',
    ),

    char_literal: _ => token(seq(
      '\'',
      optional(choice(
        seq('\\', ESCAPE_SEQ),
        /[^\\']/,
      )),
      '\'',
    )),

    escape_sequence: _ => token.immediate(seq('\\', ESCAPE_SEQ)),

    boolean_literal: _ => choice('true', 'false'),

    // Comments

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,
