editors/tree-sitter-lisette/test/corpus/literals.txt
================================================================================
Integer
================================================================================

let x = 42

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Hex integer
================================================================================

let x = 0xFF

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Binary integer
================================================================================

let x = 0b1010

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Octal integer
================================================================================

let x = 0o77

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (integer_literal)))

================================================================================
Float
================================================================================

let x = 3.14

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (float_literal)))

================================================================================
Float with exponent
================================================================================

let x = 1e10

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (float_literal)))

================================================================================
Imaginary int
================================================================================

let x = 4i

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (imaginary_literal
      (integer_literal))))

================================================================================
Imaginary float
================================================================================

let x = 3.14i

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (imaginary_literal
      (float_literal))))

================================================================================
String
================================================================================

let x = "hello"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (string_literal
      (string_content))))

================================================================================
String with escape
================================================================================

let x = "hello\nworld"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (string_literal
      (string_content)
      (escape_sequence)
      (string_content))))

================================================================================
Char
================================================================================

let x = 'a'

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (char_literal)))

================================================================================
Boolean true
================================================================================

let x = true

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (boolean_literal)))

================================================================================
Boolean false
================================================================================

let x = false

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (boolean_literal)))

================================================================================
Format string
================================================================================

let x = f"hello {name}"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (format_string
      (interpolation
        (identifier)))))

================================================================================
Format string escaped braces
================================================================================

let x = f"use {{braces}}"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (format_string)))

================================================================================
String multiline
================================================================================

let x = "first
second
third"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (string_literal
      (string_content))))

================================================================================
Raw string multiline
================================================================================

let x = r"first
second"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (raw_string_literal)))

================================================================================
Format string multiline text
================================================================================

let x = f"hello
{name}
world"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (format_string
      (interpolation
        (identifier)))))

================================================================================
Format string multiline interpolation rejected
:error
================================================================================

let x = f"{a +
b}"

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    value: (format_string
      (ERROR))))

================================================================================
Format string multiline string inside interpolation rejected
:error
================================================================================

let x = f"{"a
b"}"

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (identifier)
    (format_string)))

================================================================================
Format string nested f-string with multiline inner interpolation rejected
:error
================================================================================

let x = f"{f"{a +
b}"}"

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (identifier)
    (format_string
      (ERROR))))
